--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -3,7 +3,7 @@
 <div id="createCard" @principal>
 
     <a [routerLink]="['../../']">
-        <div id="cerrarBtn"> Cerrar <i class="material-icons">close</i></div>
+        <div id="cerrarBtn" matTooltip="Cerrar Pestaña" matTooltipPosition="right"> Cerrar <i class="material-icons">close</i></div>
     </a>
 
 
