--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,6 @@
-<h1 class="centerText">Usuarios</h1>
+<mat-progress-bar mode="indeterminate" *ngIf="sendingData" class="barLoader"></mat-progress-bar>
+
+<h2 class="centerText">Usuarios</h2>
 
 
 
