--- a/src/styles.css
+++ b/src/styles.css
@@ -443,6 +443,18 @@ select {
     overflow-y: scroll;
 }
 
+#createCard .options {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+#createCard .options mat-icon {
+    color: black;
+    cursor: pointer;
+    margin-right: 14px;
+}
+
 .background {
     position: fixed;
     top: 0;
