--- a/src/app/monthly-prices/create-monthly-price/create-monthly-price.component.html
+++ b/src/app/monthly-prices/create-monthly-price/create-monthly-price.component.html
@@ -1,4 +1,4 @@
-<mat-progress-bar mode="indeterminate" *ngIf="request" class="barLoader"></mat-progress-bar>
+<mat-progress-bar mode="indeterminate" *ngIf="request" class="barLoader"></mat-progress-bar>this.sortHoursUp();
 
 
 <div class="cardSpace" [@background]="state.background">
