Hora y quineca pagos
q

--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -289,9 +289,9 @@
                         <div class="formData l6 m6">
                             <label>Tipo de Salario:</label>
                             <select [(ngModel)]="salary.salary_type_id" name="salary_type_id" disbaled>
-                    <option value="1">Hora</option>
-                    <option value="2">Día</option>
-                </select>
+                                <option value="1">Hora</option>
+                                <option value="2">Quincena</option>
+                            </select>
                         </div>
 
                     </div>
