--- a/src/app/user/create-user/create-user.component.html
+++ b/src/app/user/create-user/create-user.component.html
@@ -144,7 +144,7 @@
                             <label>Tipo de Salario:</label>
                             <select [(ngModel)]="salary.salary_type_id" name="salary_type_id">
                                 <option value="1">Hora</option>
-                                <option value="2">Día</option>
+                                <option value="2">Quincena</option>
                             </select>
                         </div>
 
